A new repo is created for AI_ML

--- a/Assignment 1/Group11assignment (2).ipynb
+++ b/Assignment 1/Group11assignment (2).ipynb
@@ -12,8 +12,7 @@
     "rows,columns = df.shape\n",
     "number_features =len(df.columns)\n",
     "print (f\"\\nNumber of rows and columns: {rows,columns}\")\n",
-    "print(f\"\\nTotal number of features :{number_features}\")\n",
-    "."
+    "print(f\"\\nTotal number of features :{number_features}\")\n"
    ]
   },
   {
